--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Pwwpche.GitHub.io : what?">
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Pwwpche.GitHub.io</title>
+    <title>It works :)</title>
   </head>
 
   <body>
