--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/pwwpche">View on GitHub</a>
 
-          <h1 id="project_title">Pwwpche.GitHub.io</h1>
-          <h2 id="project_tagline">what?</h2>
+          <h1 id="project_title">It works :)</h1>
 
         </header>
     </div>
