--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
 	<head>
-		<title>Home</title>
+		<title>Pros & Partners</title>
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="js/jquery.min.js"></script>
@@ -275,7 +275,7 @@
 				</div>
 				<!--- copy-right ---->
 				<div class="copy-right text-center">
-					<p>Copyright &copy; 2014.Company name All rights reserved.</p>
+					<p>Copyright &copy; 2014.Pros & Partners name All rights reserved.</p>
 					<script type="text/javascript">
 									$(document).ready(function() {
 										/*
