--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -80,7 +80,7 @@
 			<div class="banner wow fadeIn" data-wow-delay="0.5s">
 				<div class="container">
 					<div class="banner-info text-center">
-						<h1><img src="images/logo-fullsize.png" alt="Blue Lake Capital"></h1><br />
+						<h1>Pros & Partners</h1><br />
 						<span> </span>
 						<h3>
 						<br><br>
@@ -139,7 +139,7 @@
 						<div class="tm-head-grids">
 							<div class="tm-head-grid wow fadeInLeft" data-wow-delay="0.4s">
 								<img src="images/team-member1.jpg" alt="">
-								<h4>路人甲</h4>
+								<h4>靖雷</h4>
 								<h5>合伙人</h5>
 								<ul class="top-social-icons">
 									<li><a class="twitter" href="#"> </a></li>
@@ -150,7 +150,7 @@
 							</div>
 							<div class="tm-head-grid wow fadeInUp" data-wow-delay="0.4s">
 								<img src="images/team-member2.jpg" alt="">
-								<h4>路人乙</h4>
+								<h4>童杰</h4>
 								<h5>合伙人</h5>
 								<ul class="top-social-icons">
 									<li><a class="twitter" href="#"> </a></li>
@@ -161,8 +161,8 @@
 							</div>
 							<div class="tm-head-grid wow fadeInRight" data-wow-delay="0.4s">
 								<img src="images/team-member3.jpg" alt="">
-								<h4>Uku Mason</h4>
-								<h5>Graphic Designer</h5>
+								<h4>XXX</h4>
+								<h5>合伙人</h5>
 								<ul class="top-social-icons">
 									<li><a class="twitter" href="#"> </a></li>
 									<li><a class="facebook" href="#"> </a></li>
