add chinese title

--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
 	<head>
-		<title>Pros & Partners</title>
+		<title>澎湃资本 Pros & Partners</title>
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="js/jquery.min.js"></script>
@@ -80,7 +80,8 @@
 			<div class="banner wow fadeIn" data-wow-delay="0.5s">
 				<div class="container">
 					<div class="banner-info text-center">
-						<h1>Pros & Partners</h1><br />
+						<h1>澎湃资本</h1><br>
+						<h2>Pros & Partners</h2><br>
 						<span> </span>
 						<h3>
 						<br><br>
