--- a/html5up-tessellate/index.html
+++ b/html5up-tessellate/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="zh-CN">
 	<head>
-		<title>Pros & Partners</title>
+		<title>澎湃资本 Pros & Partners</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,8 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Pros & Partners</h1>
+					<h1>澎湃资本</h1><br>
+					<h2>Pros & Partners</h2><br>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">了解我们</a>
