--- a/wechat_demo/account.html
+++ b/wechat_demo/account.html
@@ -6,12 +6,12 @@
 <title>我的账户</title>
 <!--<base href="http://127.0.0.1/">--><base href=".">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<script src="./我的账户_files/jquery-2.1.1.min.js" type="text/javascript"></script>
-<link href="./我的账户_files/bootstrap.min.css" rel="stylesheet" media="screen">
-<script src="./我的账户_files/bootstrap.min.js" type="text/javascript"></script>
-<link href="./我的账户_files/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="./我的账户_files/stylesheet.css" rel="stylesheet">
-<script src="./我的账户_files/common.js" type="text/javascript"></script><style type="text/css"></style>
+<script src="./account_files/jquery-2.1.1.min.js" type="text/javascript"></script>
+<link href="./account_files/bootstrap.min.css" rel="stylesheet" media="screen">
+<script src="./account_files/bootstrap.min.js" type="text/javascript"></script>
+<link href="./account_files/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="./account_files/stylesheet.css" rel="stylesheet">
+<script src="./account_files/common.js" type="text/javascript"></script><style type="text/css"></style>
 </head>
 <body class="account-account">
 <nav id="top">
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div id="logo">
-                    <a href="http://127.0.0.1/index.php?route=common/home"><img src="./我的账户_files/logo.png" title="WeLo" alt="WeLo" class="img-responsive"></a>
+                    <a href="http://127.0.0.1/index.php?route=common/home"><img src="./account_files/logo.png" title="WeLo" alt="WeLo" class="img-responsive"></a>
                   </div>
       </div>
       <div class="col-sm-5">
@@ -123,7 +123,7 @@
                 <!--
                 <a href="http://127.0.0.1/index.php?route=common/home"><img src="http://127.0.0.1/image/cache/qrcode_for_welo-128x128.jpg"  title="qrcode_welo" class="img-thumbnail" /></a>
                 -->
-                <img src="./我的账户_files/qrcode_for_welo-128x128.jpg">
+                <img src="./account_files/qrcode_for_welo-128x128.jpg">
               </div>
             </td>
           </tr>
