--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -128,7 +128,7 @@
 				</div>
 			</div>
 			<div class="clearfix">
-				<a class="leran-more scroll" href="#team">继续了解</a>
+				<a class="leran-more scroll" href="#team"><img src="images/to-next.png"></img></a>
 			</div>
 		</div>
 		<!--- services-grids --->
@@ -138,8 +138,8 @@
 <div class="clearfix"> </div>
 
 <!---- team --->
-<div id="team" class="team-members">
-	<div class="wrap">
+<div id="team" >
+	<div class="wrap" class="team-members">
 		<div class="tm-head">
 			<h3>我们的合伙人</h3>
 			<p>我们选择并坚持合伙人在一线工作</p>
@@ -180,16 +180,17 @@
 			</div>
 			<div class="clearfix"> </div>
 		</div>
-		<p class="team-info"><a class="leran-more scroll" href="#intro">继续了解</a></p>
+		<p class="team-info"><a class="leran-more scroll" href="#intro"><img src="images/to-next.png"></img></a></p>
 	</div>
 </div>
 <!---- team --->
+
 <!---- portfolio --->
 <div class="portfolio">
 	<div class="portfolio-top">
 
-		<div class="col-md-8" id="intro">
-			<div class="portfolio-top-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+		<div class="col-md-8" >
+			<div class="portfolio-top-left wow fadeInLeft animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;" id="intro">
 				<h3>我们是谁</h3>
 				<p>澎湃资本，是一个由中国优秀的第二代投资人组成的专业股权投资管理平台。面对经济增长放缓、传统行业转型、创新创业涌起的特殊历史阶段，澎湃团队坚定看好“新经济+”的投资主体，坚持采用“价值重塑”的投资方法，坚决推动“黄金接力”的资本路径，坚信培育“生态孵化”的企业价值，坚守承诺“共赢分享”的合作原则，不断发现、培育和支持第二代明星企业家和优秀投资人的成长和成功，致力于为中国专业基金投资人带来良好的、可持续的与相对可控的投资回报。
 
@@ -216,18 +217,14 @@
 
 
 						<div class="clearfix">
-							<a class="leran-more scroll" href="#projects">继续了解</a>
+							
 						</div>
 					</div>
 
-
-					<div class="portfolio-top-left-grid">
-
-					</div>
 				</div>
 
 				<div class="clearfix">
-
+					<a class="leran-more scroll" href="#projects"><img src="images/to-next.png"></img></a>
 				</div>
 			</div>
 		</div>
@@ -240,78 +237,14 @@
 
 	</div>
 
-	<div class="portfolio-works" >
-		<div class="col-md-4 portfolio-work-grid wow bounceIn animated" style="visibility: visible;" id="projects">
-			<div class="portfolio-work-grid-pic">
-				<img src="images/c1.jpg" title="name">
-			</div>
-			<div class="portfolio-work-grid-caption">
-				<h4>蜂窝微服</h4>
-
-			</div>
-		</div>
-		<div class="col-md-4 portfolio-work-grid wow bounceIn animated" style="visibility: visible; ">
-			<div class="portfolio-work-grid-pic">
-				<img src="images/c2.jpg" title="name">
-			</div>
-			<div class="portfolio-work-grid-caption">
-				<h4>助理来也</h4>
-				<p>“助理来也”目标做每个用户最有爱贴心的私人助理，并通过对话和推荐等智能交互技术人性化地连接人和本地商业。产品上线半年多，已经成为这个创业方向上的业界标杆。
-				</p>
-				<p>								2015年8月获得由光速创投，红杉资本，澎湃资本和真格投资联合投资的400万美金天使融资。</p>
-				<p>2016年3月完成由光速创投及微软创投联合投资的A轮融资</p>
-			</div>
-		</div>
-		<div class="col-md-4 portfolio-work-grid wow bounceIn animated" style="visibility: visible;">
-			<div class="portfolio-work-grid-pic">
-				<img src="images/c3.jpg" title="name">
-			</div>
-			<div class="portfolio-work-grid-caption">
-				<h4>够赞</h4>
-				<p>“够赞”是一款面向消费升级的精品垂直电商平台。为用户提供高性价比的D+F商品（设计师和供应链对接商品）、热门IP商品；并通过话题引导和游戏性玩法，完成C2B定制化销售.</p>
-				<p>2016年2月AppV1.0版本上线</p>
-				<p>2016年4月获澎湃资本天使投资</p>
-			</div>
-		</div>
-		<div class="col-md-4 portfolio-work-grid wow bounceIn animated" style="visibility: visible; ">
-			<div class="portfolio-work-grid-pic">
-				<img src="images/c4.jpg" title="name">
-			</div>
-			<div class="portfolio-work-grid-caption">
-				<h4>alphace玉颜</h4>
-				<p>Alphace玉颜，全球首款智能测肤护肤仪，采用alphace scan技术随时随地了解肌肤状况；alphace sonic声波导入技术，帮助精华吸收，抚平细小皱纹。匠心打造alphace时尚科技品牌，为用户提供更多智能化的产品与服务。</p>
-				<p>2015年5月获得澎湃资本300万元天使融资。</p>
-			</div>
-		</div>
-		<div class="col-md-4 portfolio-work-grid wow bounceIn animated" style="visibility: visible;">
-			<div class="portfolio-work-grid-pic">
-				<img src="images/c5.jpg" title="name">
-			</div>
-			<div class="portfolio-work-grid-caption">
-				<h4>帝先实业</h4>
-				<p>立足于优化农产品流通，以系统化运营的手段，为零售环节提升人流并降低采购成本；从而为农产品供应链流通降低流通成本，提升流通 效率。现阶段在上海市迅速拓展市场。以自营交易闭环入手，完成信息整合，并逐步实现互联网化。</p>
-				<p>2015年12月获得澎湃资本投资的400万天使融资。</p>
-			</div>
-		</div>
-		<div class="col-md-4 portfolio-work-grid wow bounceIn animated" style="visibility: visible; ">
-			<div class="portfolio-work-grid-pic">
-				<img src="images/c6.jpg" title="name">
-			</div>
-			<div class="portfolio-work-grid-caption">
-				<h4>奇思</h4>
-				<p>奇思是移动视频领域的领军企业，旗下产品线覆盖逾三成 iOS 活跃用户，视频产品形式涵盖VR、聚合、直播及垂直细分等多个领域，秉承“移动视频+”的战略理念，逐渐形成一套完善的移动视频生态系统。</p>
-				<p>2014年10月获得天使轮融资</p>
-				<p>2015年8月获得澎湃资本Pre-A轮融资</p>
-			</div>
-		</div>
-		<div class="clearfix"> </div>
-	</div>
-
 </div>
 <!---- portfolio --->
+
+
+
 <!---start-about---->
-<div class="about">
-	<div class="wrap">
+<div class="about" >
+	<div class="wrap" id="projects">
 		<div class="about-head">
 			<h1>已投项目</h1>
 			<span> </span>
@@ -373,7 +306,9 @@
 			</li>
 
 
-			<div class="clearfix"> </div>
+			<div class="clearfix" style="text-align:center"> 
+				<a class="leran-more scroll" href="#contacts"><img src="images/to-next.png"></img></a>
+			</div>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
@@ -385,36 +320,28 @@
 <div id="contact" class="contact">
 	<div class="container">
 		<div class="contact-grids">
-			<div class="col-md-6">
-				<div class="contact-left wow fadeInRight" data-wow-delay="0.4s">
+			<div class="col-md-12">
+				<div class="contact-left wow fadeInRight" data-wow-delay="0.4s" id="contacts">
 					<h3>联系我们</h3>
-					<label>提交意向书</label>
+					<label></label>
 					<div class="contact-left-grids">
 						<div class="col-md-6">
 							<div class="contact-left-grid">
-								<p><span class="c-mobi"> </span>(416) 555-0000</p>
-							</div>
+								<p><span class="c-house"> </span>中国上海市徐汇区淮海中路1010号嘉华中心3505室</p>
+							</div>	 
 						</div>
 						<div class="col-md-6">
 							<div class="contact-right-grid">
-								<p><span class="c-msg"> </span><a href="mailto:eric.tong@prospartners.com">eric.tong@prospartners.com</a></p>
+								<p><span class="c-msg"> </span><a href="mailto:bp@prospartners.com">bp@prospartners.com</a></p>
 
 							</div>
 						</div>
+
 						<div class="clearfix"> </div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
-				<div class="contact-right wow fadeInLeft" data-wow-delay="0.4s">
-					<form>
-						<input type="text" class="text" value="Name..." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Name...';}">
-						<input type="text" class="text" value="Email..." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Email...';}">
-						<textarea value="Message:" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Message';}">Message..</textarea>
-						<input class="wow shake" data-wow-delay="0.3s" type="submit" value="发送" />
-					</form>
-				</div>
-			</div>
+
 			<div class="clearfix"> </div>
 		</div>
 		<!--- copy-right ---->
