--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -33,7 +33,8 @@
     <link href="css/style.css" rel='stylesheet' type='text/css' />
     <!-- Custom Theme files -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <script type="application/x-javascript">
+        addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
     </script>
 
     <script>
@@ -233,7 +234,7 @@
             </div>
 
             <div class="clearfix pf-center">
-                <a class="leran-more scroll" href="#projects"><img src="images/to-next.png"></img></a>
+                <a class="leran-more scroll" href="#projects"><img src="images/to-next.png"></a>
             </div>
         </div>
 
@@ -346,7 +347,7 @@
             </div>
 
             <div class="clearfix" style="text-align:center">
-                <a class="leran-more scroll" href="#contacts"><img src="images/to-next.png"></img></a>
+                <a class="leran-more scroll" href="#contacts"><img src="images/to-next.png"></a>
             </div>
         </div>
         <div class="clearfix"> </div>
