Set auto to true on carousel

--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -400,7 +400,7 @@
 
                     $().UItoTop({ easingType: 'easeOutQuart' });
                     $('#prev_projects ul').carouFredSel({
-                        auto: false,
+                        auto: true,
                         mousewheel: true,
                         swipe: {
                             onMouse : true,
