--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -8,6 +8,7 @@
     <!-- Custom Theme files -->
     <!---- animated-css ---->
     <link href="css/animate.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/jquery.fullPage.css" rel="stylesheet" type="text/css" media="all">
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -19,6 +20,7 @@
     <script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
     <script src="js/jquery.touchSwipe.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/jquery.fullPage.min.js"></script>
 
 
     <script type="text/javascript">
@@ -38,25 +40,103 @@
     </script>
 
     <script>
-    $(function() {
-        var pull 		= $('#pull');
-        menu 		= $('nav ul');
-        menuHeight	= menu.height();
-        $(pull).on('click', function(e) {
-            e.preventDefault();
-            menu.slideToggle();
+        $(function() {
+            var pull 		= $('#pull');
+            menu 		= $('nav ul');
+            menuHeight	= menu.height();
+            $(pull).on('click', function(e) {
+                e.preventDefault();
+                menu.slideToggle();
+            });
+            $(window).resize(function(){
+                var w = $(window).width();
+                if(w > 320 && menu.is(':hidden')) {
+                    menu.removeAttr('style');
+                }
+            });
         });
-        $(window).resize(function(){
-            var w = $(window).width();
-            if(w > 320 && menu.is(':hidden')) {
-                menu.removeAttr('style');
-            }
-        });
-    });
     </script>
+
+    <script type="text/javascript">
+
+
+        $(document).ready(function() {
+            function afterEvent(){
+                var current = $("#prev_projects li").eq(0).children("img");
+                var index = images.index(current);
+                console.log(index);
+                $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
+            }
+
+            $().UItoTop({ easingType: 'easeOutQuart' });
+            $('#prev_projects ul').carouFredSel({
+                auto: true,
+                mousewheel: true,
+                swipe: {
+                    onMouse : true,
+                    onTouch: true
+                },
+                scroll: {
+                    pauseOnHover: true,
+                    onAfter : function(data){
+                        if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+                            var current = $("#prev_projects li").eq(0);
+                            //current.addClass("selected-project").siblings().removeClass("selected-project");
+                            var index = images.index(current.children("img"));
+                            console.log(index);
+                            $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
+                        }
+                    }
+                }
+            });
+
+            var imgs = $("#prev_projects li img");
+            console.log(imgs);
+            imgs.each(function() {
+                //This works for png files.
+                if($(this).width() != 0) {
+                    $(this).css({
+                        'left' : (200 - $(this).width()) / 2,
+                        'top' : (200 - $(this).height()) / 2,
+                        'position' : 'relative'
+                    });
+                }else{
+                    $(this).on('load', function(){
+                        $(this).css({
+                            'left' : (200 - $(this).width()) / 2,
+                            'top' : (200 - $(this).height()) / 2,
+                            'position' : 'relative'
+                        });
+                    });
+                }
+
+            });
+
+            $("#prev_projects li").each(function (i) {
+                var index = i;
+                $(this).mouseenter(function () {
+                    $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
+                    $(this).addClass("selected-project").siblings().removeClass("selected-project");
+                });
+            });
+            var images = $("#prev_projects li img");
+
+            $("#prev_projects").on('touchend', 'li', function(){
+
+            });
+
+            $("#fullpage").fullPage();
+
+
+        });
+
+    </script>
+
     <!----//End-top-nav-script---->
 </head>
 <body>
+
+
 <div class="bg">
     <!----- start-header---->
     <div id="home" class="header wow bounceInDown" data-wow-delay="0.4s">
@@ -140,10 +220,9 @@
     </div>
 </div>
 <!--- services --->
-<div class="clearfix"> </div>
 
 <!---- team --->
-<div id="team" >
+<div id="team" class="" >
     <div class="wrap" class="team-members">
         <div class="tm-head">
             <h3>我们的合伙人</h3>
@@ -276,7 +355,7 @@
             <div class="time-line-tabs">
 
 
-                <div class="tab" hidden="hidden">
+                <div class="tab" >
                     <div class="row">
                         <div class="col-lg-3">
                             <img src="images/c1.jpg" alt="" />
@@ -314,7 +393,7 @@
                     </div>
                 </div>
                 <div class="tab">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3" hidden="hidden">
                         <img src="images/c4.jpg" alt="" />
                     </div>
                     <div class="col-lg-9" data-wow-delay="0.4s">
@@ -355,6 +434,7 @@
     <!---//End-about-time-line---->
     <!---- about ---->
 </div>
+<!---end-about---->
 
 <!---- contact --->
 <div id="contact" class="contact">
@@ -387,86 +467,13 @@
         <!--- copy-right ---->
         <div class="copy-right text-center">
             <p>Copyright &copy; 2016.Pros & Partners name All rights reserved.</p>
-            <script type="text/javascript">
 
-
-                $(document).ready(function() {
-                    function afterEvent(){
-                        var current = $("#prev_projects li").eq(0).children("img");
-                        var index = images.index(current);
-                        console.log(index);
-                        $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
-                    }
-
-                    $().UItoTop({ easingType: 'easeOutQuart' });
-                    $('#prev_projects ul').carouFredSel({
-                        auto: true,
-                        mousewheel: true,
-                        swipe: {
-                            onMouse : true,
-                            onTouch: true
-                        },
-                        scroll: {
-                            pauseOnHover: true,
-                            onAfter : function(data){
-                                if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-                                    var current = $("#prev_projects li").eq(0);
-                                    //current.addClass("selected-project").siblings().removeClass("selected-project");
-                                    var index = images.index(current.children("img"));
-                                    console.log(index);
-                                    $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
-                                }
-                            }
-                        }
-                    });
-
-                    var imgs = $("#prev_projects li img");
-                    console.log(imgs);
-                    imgs.each(function() {
-                        //This works for png files.
-                        if($(this).width() != 0) {
-                            $(this).css({
-                                'left' : (200 - $(this).width()) / 2,
-                                'top' : (200 - $(this).height()) / 2,
-                                'position' : 'relative'
-                            });
-                        }else{
-                            $(this).on('load', function(){
-                                $(this).css({
-                                    'left' : (200 - $(this).width()) / 2,
-                                    'top' : (200 - $(this).height()) / 2,
-                                    'position' : 'relative'
-                                });
-                            });
-                        }
-
-                    });
-
-                    $("#prev_projects li").each(function (i) {
-                        var index = i;
-                        $(this).mouseenter(function () {
-                            $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
-                            $(this).addClass("selected-project").siblings().removeClass("selected-project");
-                        });
-                    });
-                    var images = $("#prev_projects li img");
-
-                    $("#prev_projects").on('touchend', 'li', function(){
-
-                    });
-
-
-
-                });
-
-            </script>
             <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
         </div>
         <!--- copy-right ---->
     </div>
 </div>
 <!---- contact --->
-</div>
 
 </body>
 </html>
