--- a/html5_dreams/index.html
+++ b/html5_dreams/index.html
@@ -24,7 +24,7 @@
 
 
     <script type="text/javascript">
-        jQuery(document).ready(function($) {
+        $(document).ready(function($) {
             $(".scroll").click(function(event){
                 event.preventDefault();
                 $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
@@ -60,7 +60,20 @@
     </script>
 
     <script type="text/javascript">
+        $(document).on("pageinit","#contact",function(){
 
+            $(this).on('tap', function(){
+                console.log($(this));
+                /*
+                 var current = $("#prev_projects li").eq(0);
+                 var index = images.index(current.children("img"));
+                 alert(index);
+                 console.log(index);
+                 $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
+                 */
+            });
+
+        });
 
         $(document).ready(function() {
             var images = $("#prev_projects li img");
@@ -73,6 +86,7 @@
                     onTouch: true
                 },
                 scroll: {
+                    items : 1,
                     pauseOnHover: true,
                     onAfter : function(data){
                         if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
@@ -103,13 +117,6 @@
                         });
                     });
                 }
-            });
-            $("#prev_projects").on('tap', function(){
-                var current = $("#prev_projects li").eq(0);
-                var index = images.index(current.children("img"));
-                alert(index);
-                console.log(index);
-                $(".about-time-line .tab").eq(index).show().siblings(".tab").hide();
             });
 
 
@@ -415,7 +422,7 @@
                 </div>
 
                 <div class="tab" hidden="hidden">
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <img src="images/c8.png" alt="" />
                     </div>
                     <div class="col-lg-8" data-wow-delay="0.4s">
@@ -473,6 +480,7 @@
             <p>Copyright &copy; 2016.Pros & Partners name All rights reserved.</p>
 
             <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+            <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="loaopacity: 1;"> </span></a>
         </div>
         <!--- copy-right ---->
     </div>
