--- a/Alphace/index.html
+++ b/Alphace/index.html
@@ -40,7 +40,7 @@
 							<p>Alphace美容笔是全球首个智能肤质测试与护肤精华导入相结合的美妆仪器，您只需一只便携Alpahce，就可快速精准确定自己的真实肤质情况，然后对症下药，利用导入端加速心仪护肤品精华的吸收。先知肤后护肤，精准快速不盲目。</p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium) clear-right">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/product.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -50,7 +50,7 @@
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u$ 12u$(medium) ">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/office.png" alt="" /></span>
 						</div>
 						<div class="6u 12u$(medium) important(medium)" style="clear:right;">
 							<header class="major">
@@ -73,27 +73,29 @@
 						<div class="6u 12u$(medium)">
 							<ul class="major-icons">
 								<li><span class="icon style1 major">
-									<img src="images/pic05.jpg" alt="">
+									<img src="images/ico1.png" alt="">
 								</span></li>
 								<li><span class="icon style2 major">
-									<img src="images/pic05.jpg" alt="">
+									<img src="images/ico2.png" alt="">
 								</span></li>
 								<li><span class="icon style3 major">
-									<img src="images/pic05.jpg" alt="">
+									<img src="images/ico3.png" alt="">
 								</span></li>
 								<li><span class="icon style4 major">
-									<img src="images/pic05.jpg" alt="">
+									<img src="images/ico4.png" alt="">
 								</span></li>
 							</ul>
 						</div>
-						<div class="6u$ 12u$(medium) function-intro">
+						<div class=" function-intro 6u$ 12u$(medium)">
 							<header class="major">
-								<h2>功能介绍</h2>
+								<h2><br/>功能介绍</h2>
 							</header>
 							<p>毛孔清洁度：黑头闭口早提防</p>
 							<p>细胞水分度：细纹衰老早预防</p>
 							<p>皮层色斑度：美白清透早准备</p>
 							<p>铂金导入端：纳米磁震5秒即可加速精华液渗入细胞</p>
+							<br/>
+							<br/>
 						</div>
 					</div>
 				</div>
