Modify home index.html, add basic user profile.

--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Che Liu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -30,10 +30,10 @@
 
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-user"></a><h6>Blog</h6></li>
-								<li><a href="#" class="fa-github"></a>Git</li>
-								<li><a href="#" class="fa-file-pdf-o"></a>CV</li>
-								<li><a href="#" class="fa-envelope-o"></a>Email</li>
+								<li><a href="../index.html" class="fa-user"></a><h6>Blog</h6></li>
+								<li><a href="http://github.com/pwwpche" class="fa-github"></a>Git</li>
+								<li><a href="che_liu_cv.pdf" class="fa-file-pdf-o"></a>CV</li>
+								<li><a href="mailto:pwwpche@gmail.com" class="fa-envelope-o"></a>Email</li>
 
 							</ul>
 						</footer>
