--- a/home/index.html
+++ b/home/index.html
@@ -30,10 +30,11 @@
 
 						<footer>
 							<ul class="icons">
-								<li><a href="../index.html" class="fa-user"></a><h6>Blog</h6></li>
-								<li><a href="http://github.com/pwwpche" class="fa-github"></a>Git</li>
-								<li><a href="che_liu_cv.pdf" class="fa-file-pdf-o"></a>CV</li>
-								<li><a href="mailto:pwwpche@gmail.com" class="fa-envelope-o"></a>Email</li>
+								<li><a href="../index.html" class="fa-rss"></a></li>
+								<li><a href="http://github.com/pwwpche" class="fa-github"></a></li>
+								<li><a href="https://www.linkedin.com/in/che-liu-02038591" class="fa-linkedin"></a></li>
+								<li><a href="che_liu_cv.pdf" class="fa-file-text-o"></a></li>
+								<li><a href="mailto:pwwpche@gmail.com" class="fa-envelope-o"></a></li>
 
 							</ul>
 						</footer>
