--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
-<universal-navbar-element></<universal-navbar-element>
+<universal-navbar-element></universal-navbar-element>
 <csrf></csrf>
 <ngRoute></ngRoute>
